Fix file URL loading: use standard Java URL APIs instead of string manipulation
initializeApp() now uses File.toURI().toURL() for correct file: URLs.
URLData constructor uses new URL(context, url) to resolve relative URLs.
Removes the fragile baseContext() method entirely.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>